Update project to use latest Dagger 2 version and DI techniques

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -11,7 +11,7 @@
 
         <fragment
             android:id="@+id/search_fragment"
-            android:name="com.github.ppartisan.fishportal.search.SearchFragment"
+            android:name="com.github.ppartisan.fishportal.search.fragment.SearchFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
